feat: waybar customization, theme system, rofi and scripts
- Custom waybar widgets: battery, brightness, sys-stats, network
- Theme switcher system (nord/lancer) with swww transitions
- Themes apply to: waybar, kitty, rofi, fastfetch, hyprland borders
- Rofi configured with icons and per-theme colors
- Scripts: battery-bar, brightness-bar, sys-stats

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,6 +16,9 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+# Tema ativo
+source = ~/.config/hypr/theme-colors.conf
+
 
 ################
 ### MONITORS ###
@@ -34,7 +37,7 @@ monitor=eDP-1,1920x1080@59.97700,0x0,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = hyprlauncher
+$menu = rofi -show drun -show-icons
 $browser = google-chrome-stable
 
 #################
@@ -47,7 +50,7 @@ $browser = google-chrome-stable
 exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper 
+exec-once = waybar & swww-daemon 
 
 
 #############################
@@ -55,9 +58,6 @@ exec-once = waybar & hyprpaper
 #############################
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
 
 
 ###################
@@ -91,8 +91,8 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $accent $accent2 45deg
+    col.inactive_border = $border_inactive
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -122,10 +122,14 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
+        size = 12
+        passes = 4
+        noise = 0.0
+        contrast = 1.0
+        brightness = 0.3
+        vibrancy = 0.0
+        new_optimizations = true
+        ignore_opacity = true
     }
 }
 
@@ -209,7 +213,7 @@ misc {
 
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = br
     kb_variant =
     kb_model =
     kb_options =
@@ -244,16 +248,17 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, togglefloating
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, Space, exec, hyprctl switchxkblayout at-translated-set-2-keyboard next   
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -272,6 +277,10 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+# Alternar temas com CTRL + $mainMod + [número]
+bind = CTRL $mainMod, 1, exec, ~/.config/themes/switch.sh nord
+bind = CTRL $mainMod, 2, exec, ~/.config/themes/switch.sh lancer
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -310,6 +319,7 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
