--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,8 +17,8 @@ include GruvBox_DarkHard.conf
 #include VSCode_Dark.conf
 
 # terminal opacity and blur
-background_opacity 0.9
-background_blur 1
+background_opacity 0.0
+background_blur 64
 
 # advance 
 term xterm-kitty
@@ -42,6 +42,7 @@ map ctrl+shift+backspace change_font_size all 0
 # cursor customization
 # block / beam / underline
 cursor_shape block
+cursor_trail 3
 cursor_blink_interval 0
 cursor_stop_blinking_after 0
 shell_integration no-cursor
